Refatocr und Test reset CollectionViewModel

--- a/CustomWPFControls.Tests/CustomWPFControls.Tests.csproj
+++ b/CustomWPFControls.Tests/CustomWPFControls.Tests.csproj
@@ -38,4 +38,8 @@
       <HintPath>..\..\DataStores\DataStores\bin\Debug\net8.0\DataStores.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Unit\CollectionViewModel\DataStoreRemove\" />
+  </ItemGroup>
 </Project>
