--- a/CustomWPFControls.Tests/CustomWPFControls.Tests.csproj
+++ b/CustomWPFControls.Tests/CustomWPFControls.Tests.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TestResults\**" />
+    <EmbeddedResource Remove="TestResults\**" />
+    <None Remove="TestResults\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
@@ -37,9 +43,8 @@
     <Reference Include="DataStores">
       <HintPath>..\..\DataStores\DataStores\bin\Debug\net8.0\DataStores.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Unit\CollectionViewModel\DataStoreRemove\" />
+    <Reference Include="TestHelper.DataStores">
+      <HintPath>..\..\DataStores\TestHelper.DataStores\bin\Debug\net8.0\TestHelper.DataStores.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
