--- a/CustomWPFControls.Tests/CustomWPFControls.Tests.csproj
+++ b/CustomWPFControls.Tests/CustomWPFControls.Tests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Unit\CollectionViewModel\RemoveAPI\ContainsTests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
