refactor(tests): Migrate to scenario-based test structure with Fixture.Sut pattern
- Created 15 new scenario-based test files
- Refactored 38+ tests to use _fixture.Sut instead of creating own instances
- Removed 4 obsolete test files (PrePopulated fixtures, InitializationTests)
- All tests now use local ModelStore instead of global store
- Improved test isolation and clarity

--- a/CustomWPFControls.Tests/CustomWPFControls.Tests.csproj
+++ b/CustomWPFControls.Tests/CustomWPFControls.Tests.csproj
@@ -51,4 +51,8 @@
       <HintPath>..\..\DataStores\TestHelper.DataStores\bin\Debug\net8.0\TestHelper.DataStores.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Unit\CollectionViewModel\Lifecycle\" />
+  </ItemGroup>
 </Project>
