--- a/TestHelper.CustomWPFControls/TestHelper.CustomWPFControls.csproj
+++ b/TestHelper.CustomWPFControls/TestHelper.CustomWPFControls.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -8,7 +8,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
     
     <!-- NuGet Package Metadata -->
-    <PackageId>CustomWPFControls.TestHelpers</PackageId>
+    <PackageId>TestHelper.CustomWPFControls</PackageId>
     <Version>2.0.0</Version>
     <Authors>CustomWPFControls</Authors>
     <Description>Test helpers and mock implementations for testing applications using CustomWPFControls library</Description>
@@ -19,10 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CustomWPFControls\CustomWPFControls.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Mocks\" />
   </ItemGroup>
 
 </Project>
